--- a/pkgs/gap_detection/CMakeLists.txt
+++ b/pkgs/gap_detection/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 # find dependencies
 find_package(tf2 REQUIRED)
+find_package(rclpy REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nav_msgs REQUIRED)
@@ -14,6 +15,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
+find_package(ament_cmake_python REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -34,6 +36,12 @@ ament_target_dependencies(gap_detector
   visualization_msgs
 )
 
+add_executable(gap_reader src/get_gaps.cpp)
+ament_target_dependencies(gap_reader
+  rclcpp
+  geometry_msgs
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -46,12 +54,23 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-ament_package()
 
 install(TARGETS
   gap_detector
+  gap_reader
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}/
 )
+
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
+
+# Install Python executables
+install(PROGRAMS
+  scripts/get_gaps.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_package()
